--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@ section#work .container #portfolio {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
+	min-width: 80vw;
 }
 
 section#work .container #portfolio > a {
